--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node -O '{\"module\": \"CommonJS\"}' src/server.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production ts-node server.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,11 +15,19 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.5.1",
+    "node-fetch": "^2.7.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node-fetch": "^2.6.5",
+    "ts-node": "^10.9.1"
   }
 }
