--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node -O '{\"module\": \"CommonJS\"}' src/server.ts",
+    "dev": "nodemon --watch src/server.ts --exec 'ts-node -O \"{\\\"module\\\": \\\"CommonJS\\\"}\" src/server.ts'",
     "build": "next build",
     "start": "NODE_ENV=production ts-node server.ts",
     "lint": "next lint"
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node-fetch": "^2.6.5",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
 }
