--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --watch src/server.ts --exec 'ts-node -O \"{\\\"module\\\": \\\"CommonJS\\\"}\" src/server.ts'",
-    "build": "next build",
+    "build": "next build && prisma generate",
     "start": "NODE_ENV=production ts-node server.ts",
     "lint": "next lint"
   },
