--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+BASE_URL="https://tw-manage.vercel.app"
 DATABASE_URL="postgres://default:6LkCSe8nyXjt@ep-misty-field-82590367-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
 POSTGRES_PRISMA_URL="postgres://default:6LkCSe8nyXjt@ep-misty-field-82590367-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NON_POOLING="postgres://default:6LkCSe8nyXjt@ep-misty-field-82590367.us-east-1.postgres.vercel-storage.com/verceldb"
