--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
 
 BASE_URL="https://tw-manage.vercel.app"
 DATABASE_URL="postgres://default:6LkCSe8nyXjt@ep-misty-field-82590367-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
-POSTGRES_PRISMA_URL="postgres://default:6LkCSe8nyXjt@ep-misty-field-82590367-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_PRISMA_URL="postgresql://prisma:prisma@localhost:5432/prisma"
 POSTGRES_URL_NON_POOLING="postgres://default:6LkCSe8nyXjt@ep-misty-field-82590367.us-east-1.postgres.vercel-storage.com/verceldb"
