--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "next": "13.5.1",
+    "next-joi": "^2.2.1",
     "node-fetch": "^2.7.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
