--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cors": "^2.8.5",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "next": "^13.5.4",
+    "next-connect": "^1.0.0",
     "next-joi": "^2.2.1",
     "node-fetch": "^2.7.0",
     "postcss": "8.4.30",
@@ -36,6 +38,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.17",
     "@types/node-fetch": "^2.6.5",
     "nodemon": "^3.0.1",
